# FreeSMSNotification

./: .gitignore  Package.swift  README.md  setup.cfg
.github/workflows/: codeql-analysis.yml
Sources/FreeSMSNotification/: FreeSMSNotification.swift
Tests/FreeSMSNotificationTests/: FreeSMSNotificationTests.swift
examples/: basic.py
src/: api.py
src/FreeSMSNotification/: api.py
