[metadata]
name                          = FreeSMSNotification
version                       = 0.0.1
license                       = GNU General Public License v3 or later (GPLv3+)
author                        = chalios
author_email                  = chalios@protonmail.com
description                   = Envoyez-vous des notifications SMS avec l'API Free Mobile
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/chalios/FreeSMSNotification
project_urls                  =
    Bug Tracker = https://github.com/chalios/FreeSMSNotification/issues
    Discussions = https://github.com/chalios/FreeSMSNotification/discussions
classifiers                   =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = requests

[options.packages.find]
where = src
